# airflow-dag-spark

./: README.md  pyproject.toml
astro/: Dockerfile  requirements.txt
astro/.astro/: config.yaml
astro/dags/: first-dag.py  second-dag.py
astro/include/: my-spark.py
spark-cluster/: .env  Dockerfile.spark  docker-compose.yaml  readme.md
spark-cluster/config/spark/: spark-defaults.conf
